--- a/src/styles/_bootstrap.scss
+++ b/src/styles/_bootstrap.scss
@@ -24,13 +24,13 @@ $icon-font-path: "../libs/bootstrap-sass-official/assets/fonts/bootstrap/";
 @import "bootstrap/button-groups";
 @import "bootstrap/input-groups";
 @import "bootstrap/navs";
-@import "bootstrap/navbar";
+@import "navbar";
 @import "bootstrap/breadcrumbs";
 @import "bootstrap/pagination";
 @import "bootstrap/pager";
 @import "bootstrap/labels";
 @import "bootstrap/badges";
-@import "bootstrap/jumbotron";
+@import "jumbotron";
 @import "bootstrap/thumbnails";
 @import "bootstrap/alerts";
 @import "bootstrap/progress-bars";
