Contents added to section-4

--- a/src/styles/_section3.scss
+++ b/src/styles/_section3.scss
@@ -1,5 +1,10 @@
 .section3 {
   background-color: #000;
   background-image: url('/img/technology stack/tech02.png');
-  height:860px;
+  height: 900px;
+  max-width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
