Contents added to section 5,Made responsive to tablets,technology image is compressed

--- a/src/styles/_jumbotron.scss
+++ b/src/styles/_jumbotron.scss
@@ -18,7 +18,7 @@
 .jumbotron h1 .bold-style{
   font-weight: 900;
   padding-left: 10px;
-  font-size: 90px;
+  font-size: 1.5em;
 }
 
 .container .jumbotron,.container-fluid .jumbotron {
@@ -40,7 +40,7 @@
   }
 
   .jumbotron h1,.jumbotron .h1 {
-    font-size: 60px;
+    font-size: 3.5em;
   }
 }
 
