--- a/src/styles/_section4.scss
+++ b/src/styles/_section4.scss
@@ -1,13 +1,13 @@
 section4 {
-  height: 860px;
+  height: 800px;
 }
 
 .hi-clients {
   padding-left: 10em;
-  margin-left: 16em;
-  overflow-x: hidden;
-  padding-top: 8em;
-  padding-bottom: 18em;
+  margin-left: 8em;
+  overflow-x: auto;
+  padding-top: 4em;
+  padding-bottom: 14em;
   
   .hi-clients-nowrap {
     white-space: nowrap;
