--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -5,6 +5,7 @@
 
 .navbar-nav {
   margin: 7.5px -15px;
+  font-size: 16px;
 }
 
 .navbar-nav>li>a {
@@ -53,21 +54,21 @@
     float: left;
   }
 
-.navbar-default .navbar-link {
-  color: #fff;
-}
+  .navbar-default .navbar-link {
+    color: #fff;
+  }
 
-.navbar-default .navbar-link:hover {
-  color: #333;
-}
+  .navbar-default .navbar-link:hover {
+    color: #333;
+  }
 
-.navbar-default .btn-link {
-  color: #777;
-}
+  .navbar-default .btn-link {
+    color: #777;
+  }
 
-.navbar-default .btn-link:hover,.navbar-default .btn-link:focus {
-  color: #333;
-}
+  .navbar-default .btn-link:hover,.navbar-default .btn-link:focus {
+    color: #333;
+  }
 
   .navbar-nav>li>a {
     padding-top: 15px;
