--- a/src/styles/_section3.scss
+++ b/src/styles/_section3.scss
@@ -1,6 +1,6 @@
 .section3 {
   background-color: #000;
-  background-image: url('/img/technology stack/tech02.png');
+  background-image: url('/img/technology_stack/tech_02.png');
   height: 900px;
   max-width: 100%;
   -webkit-background-size: cover;
